# ng-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: COMPETITIVE_ANALYSIS.md  FIXTURES.md  IMPLEMENTATION_PLAN.md  PRD.md
docs-site/: .gitignore  book.toml
docs-site/src/: SUMMARY.md  cli-reference.md  getting-started.md  introduction.md
docs-site/src/analyses/: boundaries.md  cycles.md  move-candidates.md  stats.md  unused.md  usages.md
docs-site/src/frameworks/: angular.md  plain-ts.md  react.md
docs-site/src/integration/: ci.md  reports.md
docs-site/src/reference/: architecture.md  roadmap.md  testing.md
scripts/: verify-unused-with-grep.py
src/: file_cache_reader.rs  main.rs
src/analyses/: boundaries.rs  mod.rs  move_candidates.rs  project_map.rs  react_usage.rs  resolution.rs  stats.rs  unused.rs
src/analysis/: mod.rs  timing.rs
src/analysis/models/: file_facts.rs  import.rs  mod.rs  react.rs  ts_config.rs
src/analysis/processor/: collector.rs  context.rs  file_processor.rs  mod.rs
src/analysis/resolvers/: cache.rs  import_graph.rs  import_resolver.rs  mod.rs  parsers.rs  resolver.rs
src/analysis/utils/: jsonc.rs  mod.rs  path_utils.rs
src/ng/: mod.rs  ng_reporter.rs
src/ng/analysis/: component_analyzer.rs  decorator_analyzer.rs  directive_analyzer.rs  mod.rs  (+5 more)
src/nx/: mod.rs  nx_project.rs  nx_workspace.rs
src/report/: baseline.rs  graph_export.rs  html.rs  mod.rs  sarif.rs  terminal.rs  usages.rs
tests/: fixtures_test.rs
tests/snapshots/: fixtures_test__f01-basic-imports.snap  fixtures_test__f03-tsconfig-paths.snap  fixtures_test__f12-edge-cases.snap  fixtures_test__f21-workspace-packages.snap  fixtures_test__f22-dead-imports.snap
(+267 files in other folders)
