[package]
name = "nx-analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Marcin Milewicz <inspiration075@gmail.com>"]
description = "Static analyzer for TypeScript NX workspaces (Angular, React, Next.js): dead-code detection, dependency graph, coupling stats and architecture boundary checks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/marcinmilewicz/nx-analyzer"
homepage = "https://marcinmilewicz.github.io/nx-analyzer/"
documentation = "https://marcinmilewicz.github.io/nx-analyzer/"
keywords = ["nx", "angular", "typescript", "dead-code", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]
exclude = ["docs-site/", "docs/", "scripts/", "tests/fixtures/", ".idea/", ".github/"]

[profile.dev]
debug = true
opt-level = 0

[dependencies]
swc_common = { version = "5.0.0", features = ["concurrent"] }
swc_ecma_ast = "5.0.0"
swc_ecma_parser = "6.0.0"
swc_ecma_visit = "5.0.0"
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10.0"
dashmap = "5.5.3"
clap = { version = "4.5.23", features = ["derive",] }
petgraph = "0.6"

[dev-dependencies]
insta = { version = "1", features = ["json"] }